--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>トップページ</h1>
+<h1>Top page</h1>
 <%= link_to '新規投稿', "/posts/new" %>
 <%# 新規投稿をクリックすると/posts/newというURLでリクエストが送られる %>
 <%# URLを指定した場合はmethodオプションをつける必要がない しかしパスを指定したときはHTTPメソッドをつける必要がある %>
